--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,5 +1,5 @@
 <div class="list-group">
   <div *ngFor="let item of collections">
-    <restorant-item  [collectionSingle]="item"></restorant-item>
+    <collection-item  [collectionSingle]="item"></collection-item>
   </div>
 </div>
