--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,7 @@
-<p>
-  detail works!
-</p>
+<div *ngIf="restaurant">
+  <div class="page-header">
+    <h1>{{ restaurant.name }} <small>{{ restaurant.cuisines }}</small></h1>
+  </div>
+  <img src="{{ restaurant.featured_image }}" class="thumbnail"/>
+  <map [restaurantLocation]="restaurant.location"></map>
+</div>
