--- a/src/app/search/city.component.html
+++ b/src/app/search/city.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/restorant', city.id]" >
+<a [routerLink]="['/collection', city.id]" >
 <li class='list-group-item'>
     <span class='badge'>Lihat Restoran</span>
     {{ city.name }}
