--- a/src/app/restaurant/restaurant_item.component.html
+++ b/src/app/restaurant/restaurant_item.component.html
@@ -1,15 +1,16 @@
-<a class="list-group-item">
+<a class="list-group-item" [routerLink]="['/detail', restaurant.id]">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">{{ collectionSingle.collection.title }}</h3>
+            <h3 class="panel-title">{{ restaurant.name }}</h3>
         </div>
         <div class="panel-body">
            <div class="col-md-4">
-                <img src="{{ collectionSingle.collection.image_url }}" width="150px" height="80px" class="img-thumbnail"/>
+                <img src="{{ restaurant.featured_image }}" width="150px" height="80px" class="img-thumbnail"/>
            </div>
            <div class="col-md-8">
+               Cuisines :
                <p style="font-size:15px">
-               {{ collectionSingle.collection.description }}
+               {{ restaurant.cuisines }}
                </p>
            </div>
         </div>
